ImpressCMS ChangeLog
=== ImpressCMS 1.3 Release Candidate 2 ===
Release date: 1 September 2011
Revision: 22516
DB Version: 41
Build Version: 49

A complete list of changes to this release series can be found here - http://sourceforge.net/apps/trac/impresscms/query?status=closed&group=component&order=priority&col=id&col=summary&col=milestone&col=status&col=type&col=priority&col=component&milestone=ImpressCMS+1.3

=== ImpressCMS 1.3 Release Candidate ===
Release date: 19 July 2011
Revision: 22079
DB Version: 41
Build Version: 48

A complete list of changes to this release series can be found here - http://sourceforge.net/apps/trac/impresscms/query?status=closed&group=component&order=priority&col=id&col=summary&col=milestone&col=status&col=type&col=priority&col=component&milestone=ImpressCMS+1.3

=== ImpressCMS 1.3 Beta 2 ===
Release date: 3 May 2011
Revision: 21585
DB Version: 41
Build Version: 42 (should have been 45)

A complete list of changes to this release series can be found here - http://sourceforge.net/apps/trac/impresscms/query?status=closed&group=component&order=priority&col=id&col=summary&col=milestone&col=status&col=type&col=priority&col=component&milestone=ImpressCMS+1.3

Updated external libraries
* FCKeditor 2.6.6
* Wideimage 11.02.19
* HTML Purifier 4.3.0

=== ImpressCMS 1.3 Beta ===
Release date: 6 March 2011
Revision: 
DB Version: 41
Build Version: 42 (should have been 43)

List of changes to this release series can be found here - http://sourceforge.net/apps/trac/impresscms/query?status=closed&group=component&order=priority&col=id&col=summary&col=milestone&col=status&col=type&col=priority&col=component&milestone=ImpressCMS+1.3

* added preference setting to allow custom filters for HTMLPurifier preferences (forgot to add these in previous versions)

=== ImpressCMS 1.3 Alpha ===
Release date: 8 January 2011
Revision: 20660
DB Version: 41
Build Version: 42

Updated external libraries:
* jQuery 1.4.4
