@@ -10,7 +10,7 @@
  * @version		$Id$
  */
 
-define('ICMS_VERSION_NAME','ImpressCMS 1.3 RC2');
+define('ICMS_VERSION_NAME', 'ImpressCMS 1.3 Final');
 
 // For backward compatibility with XOOPS
 define('XOOPS_VERSION', ICMS_VERSION_NAME);
@@ -23,15 +23,15 @@ define('XOOPS_VERSION', ICMS_VERSION_NAME);
  * 10 = Final
  */
 
-define('ICMS_VERSION_STATUS', 3);
+define('ICMS_VERSION_STATUS', 10);
 
 /**
  * Build number
  *
  * Every release has its own build number, incrementable by 1 everytime we make a release
  */
-// impresscms_1.3.0 rc = 48
-define('ICMS_VERSION_BUILD', 49);
+// impresscms_1.3.0 rc 2 = 49
+define('ICMS_VERSION_BUILD', 50);
 
 /**
  * Latest dbversion of the System Module
@@ -43,4 +43,3 @@ define('ICMS_VERSION_BUILD', 49);
  * please also change this constant
  */
 define('ICMS_SYSTEM_DBVERSION', 41);
-
