@@ -1,8 +1,8 @@
-ImpressCMS 1.3 Release Candidate 2 release notes
+ImpressCMS 1.3 Final release notes
 ================================================
 
-The ImpressCMS Project is very proud to announce Release Candidate 2 version of its 1.3 release! 
-ImpressCMS 1.3 RC2 is a major refactoring of the core and is not intended for production sites.
+The ImpressCMS Project is very proud to announce the Final version of its 1.3 release! 
+ImpressCMS 1.3 Final is a major refactoring of the core and is not intended for production sites.
 
 Please see the full [[Change Log]] for details in docs/changelog.txt.
 
@@ -15,10 +15,6 @@ Please see the full [[Change Log]] for details in docs/changelog.txt.
     ** MySQL 4.1.0 or higher
 *Web server
     ** Any server supporting the required PHP version (Apache highly recommended)
-
-==Changes in this release==
-* Updated HTMLPurifier library to 4.1.1 fixes XSS vulnerability caused by IE. adds ability to use flashvars when using
-  HTML.SafeObject/HTML.SafeEmbed options, addition of Output.FlashCompat option for IE compatibility using SafeObject. (vaughan)
 
 
 ==Downloading ImpressCMS==
@@ -36,7 +32,7 @@ wget http://www.impresscms.org/download/
 You can easily get ImpressCMS using SVN. Instructions about this can be found here: [[Install_and_update_using_SVN]].
 
 The path for this release is the following:
-https://svn.impresscms.org/core/releases/impresscms_1.3_rc2/
+https://svn.impresscms.org/core/releases/impresscms_1.3_final/
 
 If you feel like getting the latest "edge" version, you can checkout the core trunk at :
 
